RESOLVED FIXED200874
Web Inspector: Debugger: pause on assertion failures breakpoint doesn't work when inspecting a JSContext
https://bugs.webkit.org/show_bug.cgi?id=200874
Summary Web Inspector: Debugger: pause on assertion failures breakpoint doesn't work ...
Devin Rousso
Reported 2019-08-18 19:05:02 PDT
.
Attachments
Patch (1.69 KB, patch)
2019-08-18 19:29 PDT, Devin Rousso
no flags
Patch (1.66 KB, patch)
2019-08-19 21:37 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2019-08-18 19:29:46 PDT
Joseph Pecoraro
Comment 2 2019-08-19 20:43:21 PDT
Comment on attachment 376660 [details] Patch Very nice! r=me
WebKit Commit Bot
Comment 3 2019-08-19 21:11:18 PDT Comment hidden (obsolete)
Devin Rousso
Comment 4 2019-08-19 21:37:04 PDT
WebKit Commit Bot
Comment 5 2019-08-19 22:19:47 PDT
Comment on attachment 376743 [details] Patch Clearing flags on attachment: 376743 Committed r248891: <https://trac.webkit.org/changeset/248891>
WebKit Commit Bot
Comment 6 2019-08-19 22:19:48 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2019-08-19 22:20:17 PDT
Note You need to log in before you can comment on or make changes to this bug.