Web Inspector: Debugger: pause on assertion failures breakpoint doesn't work when inspecting a JSContext https://bugs.webkit.org/show_bug.cgi?id=200874

Reviewed by Joseph Pecoraro.

* inspector/JSGlobalObjectConsoleClient.cpp:
(Inspector::JSGlobalObjectConsoleClient::messageWithTypeAndLevel):


Canonical link: https://commits.webkit.org/214643@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248891 268f45cc-cd09-0410-ab3c-d52691b4dbfc